--- a/ConstructionBevy/Network/templates/network/inbox.html
+++ b/ConstructionBevy/Network/templates/network/inbox.html
@@ -29,7 +29,7 @@
   </div>
 
   {% for thread in threads.all %}
-  <div class="">
+  <div class="row">
     <div class="col-md-12 p-5">
       {% if requestUser == thread.user %}
       <h5>{{thread.receiver}}</h5>
