--- a/ConstructionBevy/Network/templates/network/thread.html
+++ b/ConstructionBevy/Network/templates/network/thread.html
@@ -19,6 +19,14 @@
   </div>
   {% endif %}
 
+<!--  <div class="row">-->
+<!--    <div class="col-md-12 p-5 border-bottom">-->
+<!--      <form method="GET" action="{% url 'create-thread' %}">-->
+<!--        <button class="btn btn-success" type="submit">Find a New Recipient</button>-->
+<!--      </form>-->
+<!--    </div>-->
+<!--  </div>-->
+
   {% for message in message_list %}
   <div class="row justify-content-center mt-3">
     <div class="col-md-5 col-sm-12 border-bottom">
@@ -32,20 +40,25 @@
         <p>{{ message.body }}</p>
         <p><strong> - {{ message.sender_user }}</strong> {{ message.date }}</p>
       </div>
-  {% endif %}
+      {% endif %}
+      <a class="btn btn-danger" href="{% url 'delete-message' thread.pk message.pk %}">Delete</a>
+<!--      {% if request.user == message.sender_user%}-->
+<!--      <a class="btn btn-danger" href="{% url 'delete-message' thread.pk message.pk %}">Delete</a>-->
+<!--      {% endif %}-->
+      <p></p>
     </div>
   </div>
   {% endfor %}
 
   <div class="row justify-content-center mt-3 mb-5">
     <div class="col-md-5 col-sm-12">
+      <br>
       <form method="POST" action="{% url 'create-message' thread.pk %}" >
         {% csrf_token %}
         {{ form }}
-        <div class="gap-2 mt-3">
+        <div class="mt-3">
           <button class="btn btn-success mt-3">Send Message</button>
           <a class="btn btn-light mt-3" href="{% url 'inbox' %}">Back to Inbox</a>
-          <a class="btn btn-danger mt-3" href="{% url 'delete-inbox' thread.pk %}">Delete</a>
         </div>
       </form>
     </div>
