--- a/ConstructionBevy/Network/templates/network/thread.html
+++ b/ConstructionBevy/Network/templates/network/thread.html
@@ -32,11 +32,17 @@
     <div class="col-md-5 col-sm-12 border-bottom">
       {% if message.sender_user == request.user %}
         <div class="sent-message my-3">
+          <p><strong>Title:</strong></p>
+          <p>{{ message.title }}</p>
+          <p><strong>Message:</strong></p>
           <p>{{ message.body }}</p>
           <p><strong> - {{ message.sender_user }}</strong> {{ message.date }}</p>
         </div>
       {% elif message.receiver_user == request.user %}
       <div class="received-message my-3">
+        <p><strong>Title:</strong></p>
+        <p>{{ message.title }}</p>
+        <p><strong>Message:</strong></p>
         <p>{{ message.body }}</p>
         <p><strong> - {{ message.sender_user }}</strong> {{ message.date }}</p>
       </div>
